# cpplang2026

./: CMakeLists.txt  README.md  build.sh
eblang-vscodextension/eblang/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
eblang-vscodextension/eblang/syntaxes/: eblang.tmLanguage.json
include/: lexer.hpp  node.hpp  parser.hpp  token.hpp
include/binder/: binder.hpp  name.hpp  scope.hpp  symbol.hpp
include/checker/: checker.hpp  flownodesymboltypesmap.hpp  type.hpp  typestore.hpp
include/common/: programuniqueid.hpp  source.hpp  sourcecodelocation.hpp  util.hpp
include/desugarer/: desugarer.hpp
include/diagnostics/: diagnosticmessage.hpp  diagnostics.hpp
include/driver/: driver.hpp
include/flow/: flowanalyzer.hpp  flowbuilder.hpp  flowgraph.hpp  flownode.hpp
include/flowbuilder/: flowbuilder.hpp  flowgraph.hpp  flownode.hpp
include/lexer/: lexer.hpp  token.hpp  tokenstore.hpp
include/parser/: node.hpp  nodemap.hpp  parser.hpp
include/treewalker/: environment.hpp  interpreter.hpp  outputstream.hpp  value.hpp  valuestore.hpp
include/utf8scanner/: utf8scanner.hpp
sampleFiles/: cfgtest.eb  cfgtest.txt  cfgtest2.eb  cfgtest2.txt  class.eb  run.eb  small.eb  small.txt  source.eb  source.txt  two.txt  type.eb  typecheck.txt
src/: lexer.cpp  main.cpp  node.cpp  parser.cpp  token.cpp
src/binder/: binder.cpp  name.cpp  scope.cpp  symbol.cpp
src/checker/: checker.cpp  flownodesymboltypesmap.cpp  type.cpp  typestore.cpp
src/common/: programuniqueid.cpp  source.cpp  sourcecodelocation.cpp  util.cpp
src/desugarer/: desugarer.cpp
src/diagnostics/: diagnosticmessage.cpp  diagnostics.cpp
src/driver/: driver.cpp
src/flow/: flowanalyzer.cpp  flowbuilder.cpp  flowgraph.cpp  flownode.cpp
src/flowbuilder/: flowbuilder.cpp  flowgraph.cpp  flownode.cpp
src/lexer/: lexer.cpp  token.cpp  tokenstore.cpp
src/parser/: node.cpp  parser.cpp
src/treewalker/: environment.cpp  interpreter.cpp  outputstream.cpp  value.cpp  valuestore.cpp
src/utf8scanner/: utf8scanner.cpp
testFiles/: basic.txt
